--- a/templates/about.html
+++ b/templates/about.html
@@ -5,5 +5,5 @@ About page
 {% endblock %}
 
 {% block content %}
-<h1>This is the about page</h1>
+<h1>Application made by Alan Calumby</h1>
 {% endblock %}
