add table of tasks

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,23 @@ Home page
 {% endblock %}
 
 {% block content %}
-<h1>This is the home page</h1>
+<h1>Tasks</h1>
+    <table class="table table-hover table-dark">
+        <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Description</th>
+                <th scope="col">Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for task in tasks: %}
+                <tr>
+                    <td>{{task.id}}</td>
+                    <td>{{task.description}}</td>
+                    <td>{{task.status}}</td>
+                </tr>
+            {% endfor%}
+        </tbody>
+     </table>
 {% endblock %}
