--- a/tasklist/templates/register.html
+++ b/tasklist/templates/register.html
@@ -30,6 +30,14 @@ Register a new user
             <br>
 
             {{ form.submit(class="btn btn-lg btn-block btn-primary")}}
+
+            <br><br>
+
+            <div class="checkbox mb-3">
+               <h6>Already an account?</h6>
+               <a class="btn btn-sm btn-secondary" href="{{ url_for('login_page') }}">Login</a>
+            </div>
+
         </form>
     </div>   
 </body>
