--- a/tasklist/templates/layout.html
+++ b/tasklist/templates/layout.html
@@ -36,7 +36,7 @@
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Logout</a>
+                            <a class="nav-link" href="{{ url_for('logout_page') }}">Logout</a>
                         </li>
                     </ul>
                 {% else %}
