Added tasks page

--- a/tasklist/templates/about.html
+++ b/tasklist/templates/about.html
@@ -6,4 +6,5 @@ About page
 
 {% block content %}
 <h1>Application made by Alan Calumby</h1>
+<h2>Tutorial from <a class="nav-link" href="http://www.jimshapedcoding.com/courses/Flask%20Full%20Series" target="_blank">Flask Full Series - Jim Shaped Coding</a></h2>
 {% endblock %}
