--- a/tasklist/templates/home.html
+++ b/tasklist/templates/home.html
@@ -1,31 +1,15 @@
 {% extends 'layout.html' %}
-
 {% block title %}
-    Home page
+    Task list
 {% endblock %}
-
 {% block content %}
-    <h1>Tasks</h1>
-    <table class="table table-hover table-dark">
-        <thead>
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Description</th>
-                <th scope="col">Status</th>
-                <th scope="col">Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for task in tasks %}
-                <tr>
-                    <td>{{task.id}}</td>
-                    <td>{{task.description}}</td>
-                    <td>{{task.status}}</td>
-                    <td>
-                        <button class="btn btn-outline bt-info">InProgress</button>
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-     </table>
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-dark" style="color:white">
+        <div class="col-md-5 p-lg-5 mx-auto my-5">
+            <h1 class="display-4 font-weight-normal">Task list</h1>
+            <p class="lead font-weight-normal">Control your tasks</p>
+            <a class="btn btn-primary" href="{{ url_for('tasks_page') }}">Get Started</a>
+        </div>
+        <div class="product-device box-shadow d-none d-md-block"></div>
+        <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
+    </div>
 {% endblock %}
