--- a/tasklist/templates/layout.html
+++ b/tasklist/templates/layout.html
@@ -25,6 +25,9 @@
                         <a class="nav-link" href="{{ url_for('home_page') }}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('tasks_page') }}">Tasks</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('about_page') }}">About</a>
                     </li>
                 </ul>
