--- a/tasklist/templates/tasks.html
+++ b/tasklist/templates/tasks.html
@@ -19,12 +19,13 @@
                 </thead>
                 <tbody>
                     {% for task in tasks %}
+                        {% include 'includes/items_modals.html' %}
                         <tr>
                             <td>{{task.id}}</td>
                             <td>{{task.description}}</td>
                             <td>{{task.status}}</td>
                             <td>
-                                <button class="btn btn-outline bt-info">InProgress</button>
+                                <button class="btn btn-outline btn-info" data-toggle="modal" data-target="#Modal-MoreInfo-{{ task.id }}">More Info</button>
                             </td>
                         </tr>
                     {% endfor %}
