--- a/tasklist/templates/tasks.html
+++ b/tasklist/templates/tasks.html
@@ -8,6 +8,7 @@
     <div class="row" style="margin-top:20px; margin-left:20px">
         <div class="col-8">
             <h2>Tasks</h2>
+            <a class="nav-link" href="{{ url_for('addtask_page') }}">Add a task</a>
             <table class="table table-hover table-dark">
                 <thead>
                     <tr>
