--- a/tasklist/templates/tasks.html
+++ b/tasklist/templates/tasks.html
@@ -26,7 +26,13 @@
                             <td>{{task.description}}</td>
                             <td>{{task.status}}</td>
                             <td>
-                                <button class="btn btn-outline btn-info" data-toggle="modal" data-target="#Modal-MoreInfo-{{ task.id }}">More Info</button>
+                                {% if task.status == 'NotStarted' %}
+                                    <button class="btn btn-outline btn-info" data-toggle="modal" data-target="#StartTask-{{ task.id }}">Start task</button>
+                                {% else %}
+                                    {% if task.status == 'InProgress' %}
+                                    <button class="btn btn-outline btn-success" data-toggle="modal" data-target="#FinishTask-{{ task.id }}">Finish task</button>
+                                    {% endif %}
+                                {% endif %}
                             </td>
                         </tr>
                     {% endfor %}
