--- a/tasklist/templates/home.html
+++ b/tasklist/templates/home.html
@@ -7,7 +7,7 @@
         <div class="col-md-5 p-lg-5 mx-auto my-5">
             <h1 class="display-4 font-weight-normal">Task list</h1>
             <p class="lead font-weight-normal">Control your tasks</p>
-            <a class="btn btn-primary" href="{{ url_for('tasks_page') }}">Get Started</a>
+            <a class="btn btn-primary" href="{{ url_for('tasks_page') }}">Get Started. Go to to task list</a>
         </div>
         <div class="product-device box-shadow d-none d-md-block"></div>
         <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
