--- a/tasklist/templates/tasks.html
+++ b/tasklist/templates/tasks.html
@@ -26,13 +26,20 @@
                             <td>{{task.description}}</td>
                             <td>{{task.status}}</td>
                             <td>
-                                {% if task.status == 'NotStarted' %}
-                                    <button class="btn btn-outline btn-info" data-toggle="modal" data-target="#StartTask-{{ task.id }}">Start task</button>
-                                {% else %}
-                                    {% if task.status == 'InProgress' %}
-                                    <button class="btn btn-outline btn-success" data-toggle="modal" data-target="#FinishTask-{{ task.id }}">Finish task</button>
-                                    {% endif %}
-                                {% endif %}
+                                <div class="row">
+                                    <div class="col-6">
+                                        {% if task.status == 'NotStarted' %}
+                                            <button class="btn btn-outline btn-info" data-toggle="modal" data-target="#StartTask-{{ task.id }}">Start task</button>
+                                        {% else %}
+                                            {% if task.status == 'InProgress' %}
+                                            <button class="btn btn-outline btn-success" data-toggle="modal" data-target="#FinishTask-{{ task.id }}">Finish task</button>
+                                            {% endif %}
+                                        {% endif %}    
+                                    </div>
+                                    <div class="col-6">
+                                        <button class="btn btn-outline btn-danger" data-toggle="modal" data-target="#Modal-DeleteTask-{{ task.id }}">Delete task</button>
+                                    </div>
+                                </div>
                             </td>
                         </tr>
                     {% endfor %}
