--- a/tasklist/templates/register.html
+++ b/tasklist/templates/register.html
@@ -15,6 +15,9 @@ Register a new user
 
             <br>
 
+            {{form.name.label()}}
+            {{form.name(class="form-control", placeholder="Your name")}}
+
             {{form.username.label()}}
             {{form.username(class="form-control", placeholder="Input the username")}}
 
